# Tetris_But_In_C

./: .gitignore  CMakeLists.txt  README.md  board.c  board.h  display.c  display.h  main.c  settings.h  shape.c  shape.h  tetris.c  tetris.h
